# CryptCore-1

./: CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  build_linux.sh  build_macos.sh  build_windows.sh  configure.ac
build-aux/m4/: bitcoin_qt.m4  gmp.m4
build-aux/snap/: snapcraft.yaml
contrib/: Cryptcore-qt.pro  gitian-build.py  valgrind.supp
contrib/debian/: Cryptcore-qt.desktop  Cryptcored.service  changelog  control  rules  watch
contrib/devtools/: README.md  check-doc.py  copyright_header.py  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: README.md
contrib/init/: Cryptcored.conf  Cryptcored.init  Cryptcored.openrc  Cryptcored.service
contrib/macdeploy/: custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md
contrib/rpm/: Cryptcore.spec
contrib/seeds/: makeseeds.py
contrib/spendfrom/: spendfrom.py
depends/: README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  gitian-building.md  init.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/gitian-building/: gitian-building-mac-os-sdk.md  gitian-setup-fedora.md  gitian-setup-mac.md  gitian-setup-ubuntu.md  gitian-setup-windows.md
doc/man/: Cryptcore-cli.1  Cryptcore-qt.1  Cryptcore-tx.1  Cryptcored.1
doc/release-notes/: release-notes-1.0.0.md
share/: setup.nsi.in  ui.rc
share/qt/: Info.plist.in
src/: Cryptcore-cli-res.rc  Cryptcore-cli.cpp  Cryptcore-tx-res.rc  Cryptcore-tx.cpp  Cryptcored-res.rc  Cryptcored.cpp  Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  allocators.cpp  allocators.h  amount.cpp  amount.h  base58.cpp  base58.h  bip38.cpp  bip38.h  blob_uint256.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  (+126 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp
src/consensus/: consensus.h  params.h  validation.h  zerocoin_verify.cpp  zerocoin_verify.h
src/legacy/: stakemodifier.cpp  stakemodifier.h
src/libzerocoin/: CoinSpend.h  Denominations.cpp  SpendType.h  bignum.h
src/primitives/: block.cpp  block.h  transaction.cpp  (+1 more)
src/qt/: CMakeLists.txt  Cryptcore.cpp  Cryptcore.qrc  Cryptcorestrings.cpp  addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  paymentserver.cpp  recentrequeststablemodel.h  rpcconsole.cpp  rpcconsole.h  splashscreen.cpp  transactiondesc.cpp  transactionfilterproxy.cpp  transactionrecord.cpp  transactionrecord.h  transactiontablemodel.cpp  utilitydialog.cpp  walletmodel.cpp  walletmodel.h  (+2 more)
src/qt/cryptcore/: Cryptcoregui.cpp  Cryptcoregui.h  addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  guitransactionsutils.cpp  guitransactionsutils.h  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  (+55 more)
src/qt/cryptcore/forms/: addresseswidget.ui  dashboardwidget.ui  masternodewizarddialog.ui  privacywidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  topbar.ui  welcomecontentwidget.ui
src/qt/cryptcore/res/css/: style_dark.css  style_light.css
src/qt/cryptcore/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/cryptcore/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingssignmessagewidgets.ui  settingswidget.ui
src/qt/forms/: helpmessagedialog.ui  intro.ui  optionsdialog.ui  rpcconsole.ui  zcorrcontroldialog.ui
src/qt/locale/: Cryptcore_de.ts  Cryptcore_en.ts  Cryptcore_en_US.ts  Cryptcore_es.ts  Cryptcore_es_ES.ts  Cryptcore_fr_FR.ts  Cryptcore_hr_HR.ts  Cryptcore_it.ts  Cryptcore_ko_KR.ts  Cryptcore_nl.ts  Cryptcore_pl.ts  Cryptcore_ru.ts  Cryptcore_tr.ts  Cryptcore_zh_CN.ts
src/qt/res/: Cryptcore-qt-res.rc
src/qt/res/css/: default.css
src/qt/test/: paymentrequestdata.h  test_main.cpp  uritests.cpp
test/: README.md
(+130 files in other folders)
